[JVMCI] Further refine JVMCI-compiled nmethod that should not collect deoptimization profile

XMLWordPrintable

    • b06

      In JDK-8357424 we prevent all non-CompilerBroker JVMCI compilations from collecting deoptimiztaion profiles. This causes some regression in Graal's whitebox unit tests, some of which employ non-CompilerBroker compilations to test deoptimiztaions.

            Assignee:
            Yudi Zheng
            Reporter:
            Yudi Zheng
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: