8361569: [JVMCI] Further refine JVMCI-compiled nmethod that should not collect deoptimization profile

Reviewed-by: dnsimon, gdub